# publication-forecast-project

./: .gitignore  README.md  app.py  main.py  packages.txt  prd.md  pyproject.toml  requirements.txt
.agent/rules/: code-style-guide.md
data/processed/: clean_metrics.parquet  forecasts.parquet
data/raw/: MASTER DATASET PRODUCTIVITY.xlsx  MASTER DATASET PRODUCTIVITYv2.xlsx
reports/: HEI_Executive_Report.html  HEI_Executive_Report.ipynb  HEI_Executive_Report.md  HEI_Executive_Report.tex  HEI_Research_Report_Data.xlsx
scripts/: fix_notebook_warnings.py  regenerate_figures.py  update_notebook.py
src/: etl.py  forecasting.py  viz_utils.py
